// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skill Skill block renders 1`] = `
<div>
  <div
    class="skill animate block white medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill closes an expandable block 1`] = `
<div>
  <div
    aria-expanded="false"
    class="skill block clickable white medium"
    data-testid="skill-block-3"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
    <div
      style="height: 0px; opacity: 0;"
    >
      <div
        class="expanded-content"
      >
        <div>
          <div
            data-testid="test-expandable-content"
          >
            Expandable content.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a clickable block 1`] = `
<div>
  <div
    class="skill animate block clickable white medium"
    data-testid="skill-block-1"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill 12
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a clickable tag 1`] = `
<div>
  <div
    class="skill animate tag clickable white medium"
    data-testid="skill-tag-1"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill 12
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a default block 1`] = `
<div>
  <div
    class="skill animate block white medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a default tag 1`] = `
<div>
  <div
    class="skill animate tag white medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a highlight block 1`] = `
<div>
  <div
    class="skill animate block highlight medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          aria-hidden="false"
          class="icon icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a highlight tag 1`] = `
<div>
  <div
    class="skill animate tag highlight medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          aria-hidden="false"
          class="icon icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a hoverable, expandable block 1`] = `
<div>
  <div
    aria-expanded="false"
    class="skill animate block hoverable white medium"
    data-testid="skill-block-4"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
    <div
      style="height: 0px; opacity: 0.022634843307857987;"
    >
      <div
        class="expanded-content"
      >
        <div>
          <div
            data-testid="test-hover-content"
          >
            Hovered expandable content.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a large tag 1`] = `
<div>
  <div
    class="skill animate tag white large"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label large"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a match block 1`] = `
<div>
  <div
    class="skill animate block match medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          aria-hidden="false"
          class="icon icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a match tag 1`] = `
<div>
  <div
    class="skill animate tag match medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          aria-hidden="false"
          class="icon icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a small tag 1`] = `
<div>
  <div
    class="skill animate tag white small"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label small"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is a xsmall tag 1`] = `
<div>
  <div
    class="skill animate tag white xsmall"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label xsmall"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill is an expandable block 1`] = `
<div>
  <div
    aria-expanded="true"
    class="skill animate block clickable white medium"
    data-testid="skill-block-2"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        />
      </div>
    </div>
    <div
      class="divider-expanded-skill"
    />
    <div
      style="height: 0px; opacity: 0;"
    >
      <div
        class="expanded-content expanded"
      >
        <div>
          <div
            data-testid="test-expandable-content"
          >
            Expandable content.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill overflow item menu 1`] = `
<div>
  <div
    aria-expanded="false"
    class="skill animate block clickable white medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div>
        <div
          style="height: auto; padding: 4px 0px; width: 320px;"
        >
          <div
            class="slider-container slider-medium show-markers"
          >
            <div
              class="extremity-label min-label min-label-text-only label-visible"
              style="opacity: 1;"
            >
              Assess skill level
               
            </div>
            <div
              class="slider"
            >
              <div
                class="slider-hit-target"
              />
              <div
                class="slider-rail slider-rail-opacity"
              />
              <div
                class="slider-track slider-track-opacity"
              />
              <div
                class="rail-marker-segments"
              >
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
                <div
                  class="rail-marker-segment"
                />
              </div>
              <div
                class="slider-step"
              />
              <div
                class="reference-wrapper"
                id="tooltip-"
              >
                <input
                  aria-disabled="false"
                  class="thumb tooltip-reference"
                  data-reference-id="tooltip--reference"
                  id="tooltip--reference"
                  max="5"
                  min="0"
                  name=""
                  step="0.1"
                  type="range"
                  value="0"
                />
              </div>
            </div>
            <div
              class="extremity-label max-label label-visible"
              style="opacity: 1;"
            >
               
            </div>
            <div
              class="slider-labels label-visible"
            >
              <div
                class="slider-value"
              >
                 
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        >
          <li>
            <div
              class="main-wrapper"
            >
              <button
                aria-controls="dropdown-"
                aria-disabled="false"
                aria-expanded="true"
                aria-haspopup="true"
                class="button button button-neutral button-small round-shape icon-left"
                data-testid="test-item-menu"
                id="dropdown-reference"
                role="button"
                tabindex="0"
              >
                <span
                  aria-hidden="false"
                  class="icon icon-wrapper"
                  role="presentation"
                >
                  <svg
                    role="presentation"
                    style="width: 16px; height: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </button>
              <span
                data-floating-ui-focus-guard=""
                data-type="outside"
                role="button"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
                tabindex="0"
              />
              <span
                aria-owns="floating-ui-12"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
              />
              <span
                data-floating-ui-focus-guard=""
                data-type="outside"
                role="button"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
                tabindex="0"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      style="height: 0px; opacity: 0;"
    >
      <div
        class="expanded-content"
      >
        <div>
          <div
            data-testid="test-expandable-content"
          >
            Expandable content.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill tag has a dropdown 1`] = `
<div>
  <div
    class="main-wrapper"
  >
    <div
      aria-controls="dropdown-"
      aria-expanded="true"
      aria-haspopup="true"
      class="reference-wrapper skill animate tag clickable white medium dropdown"
      data-testid="skill-tag-2"
      id="testSkill"
      role="button"
      tabindex="0"
    >
      <div
        class="background"
      />
      <div
        class="content"
      >
        <div
          class="block-start"
        >
          <span
            class="label medium"
          >
            test skill
          </span>
        </div>
      </div>
    </div>
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="floating-ui-0"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
    />
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Skill Skill tag has a popup 1`] = `
<div>
  <div
    class="reference-wrapper"
    id="popup-"
  >
    <div
      aria-controls="popup-"
      aria-expanded="true"
      aria-haspopup="true"
      class="skill animate tag clickable white medium tooltip-reference"
      data-reference-id="popup--reference"
      data-testid="skill-tag-3"
      id="testSkill"
      role="button"
      tabindex="0"
    >
      <div
        class="background"
      />
      <div
        class="content"
      >
        <div
          class="block-start"
        >
          <span
            class="label medium"
          >
            test skill
          </span>
        </div>
      </div>
    </div>
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <span
      aria-owns="floating-ui-1"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
    />
    <span
      data-floating-ui-focus-guard=""
      data-type="outside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Skill Skill tag has a tooltip 1`] = `
<div>
  <div
    class="reference-wrapper"
    id="tooltip-"
  >
    <div
      class="skill animate tag clickable white medium tooltip-reference"
      data-reference-id="tooltip--reference"
      data-testid="skill-tag-4"
      id="testSkill"
      tabindex="0"
    >
      <div
        class="background"
      />
      <div
        class="content"
      >
        <div
          class="block-start"
        >
          <span
            class="label medium"
          >
            test skill
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill tag is closable 1`] = `
<div>
  <div
    class="skill animate tag white medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
      <div
        class="block-end"
      >
        <ul
          class="button-list"
        >
          <li>
            <button
              aria-disabled="false"
              class="button button button-neutral button-small round-shape icon-left"
            >
              <span
                aria-hidden="false"
                class="icon icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 16px; height: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill tag is disabled 1`] = `
<div>
  <div
    class="skill animate tag white medium disabled"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill tag is readonly 1`] = `
<div>
  <div
    class="skill animate tag white medium readonly"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill tag renders 1`] = `
<div>
  <div
    class="skill animate tag white medium"
    id="testSkill"
    tabindex="0"
  >
    <div
      class="background"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          class="label medium"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skill Skill tag uses custom props 1`] = `
<div>
  <div
    class="skill tag clickable test-skill highlight medium"
    data-testid="skill-tag-5"
    id="testSkill"
    style="color: rgb(255, 255, 255); height: 80px; width: 840px;"
    tabindex="0"
    title="Test Skill"
  >
    <div
      class="background"
      style="background: rgb(51, 51, 51);"
    />
    <div
      class="content"
    >
      <div
        class="block-start"
      >
        <span
          aria-hidden="false"
          class="icon icon-wrapper"
          role="presentation"
          style="color: rgb(255, 255, 255);"
        >
          <svg
            role="presentation"
            style="width: 16px; height: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
        <span
          class="label medium"
          style="color: rgb(255, 255, 255);"
        >
          test skill
        </span>
      </div>
    </div>
  </div>
</div>
`;
